; ModuleID = '/home/carl/AnghaBench/tg/extr_interface.c_pop_color.c'
source_filename = "/home/carl/AnghaBench/tg/extr_interface.c_pop_color.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@disable_colors = common dso_local global i64 0, align 8
@color_stack_pos = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@color_stack = common dso_local global i8** null, align 8
@COLOR_NORMAL = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pop_color() #0 {
  %1 = load i64, i64* @disable_colors, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %24

4:                                                ; preds = %0
  %5 = load i32, i32* @color_stack_pos, align 4
  %6 = icmp sgt i32 %5, 0
  %7 = zext i1 %6 to i32
  %8 = call i32 @assert(i32 %7)
  %9 = load i32, i32* @color_stack_pos, align 4
  %10 = add nsw i32 %9, -1
  store i32 %10, i32* @color_stack_pos, align 4
  %11 = load i32, i32* @color_stack_pos, align 4
  %12 = icmp sge i32 %11, 1
  br i1 %12, label %13, label %21

13:                                               ; preds = %4
  %14 = load i8**, i8*** @color_stack, align 8
  %15 = load i32, i32* @color_stack_pos, align 4
  %16 = sub nsw i32 %15, 1
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i8*, i8** %14, i64 %17
  %19 = load i8*, i8** %18, align 8
  %20 = call i32 @printf(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %19)
  br label %24

21:                                               ; preds = %4
  %22 = load i8*, i8** @COLOR_NORMAL, align 8
  %23 = call i32 @printf(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %22)
  br label %24

24:                                               ; preds = %3, %21, %13
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @printf(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
